--- a/signature/index.html
+++ b/signature/index.html
@@ -30,53 +30,51 @@
 <table width="400px" border="0" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif;">
     <tr>
         <td>
-            <img src="bg2.jpg" alt=""/>
+            <img src="bg2.jpg" width="55px" height="30xp" alt=""/>
         </td>
         <td style="font-family: Arial, Helvetica, sans-serif;">
-            <span style="font-size:30px; font-weight: 300;font-family: Arial, Helvetica, sans-serif; ">
+            <span style="font-size:20px; font-weight: 300;font-family: Arial, Helvetica, sans-serif; ">
                 Mohammad Alawwad
             </span>
             <br/>
-            <span style="color:#e9532a; font-size:28px; font-weight: 300;font-family: Arial, Helvetica, sans-serif; ">
+            <span style="color:#e9532a; font-size:16px; font-weight: 300;font-family: Arial, Helvetica, sans-serif; ">
                 CEO
             </span>
         </td>
     </tr>
 </table>
-
-<table style="height:50px;">
+<table style="height:20px;">
     <tr>
         <td></td>
     </tr>
 </table>
-
 <table width="400px" border="0" cellpadding="0" cellspacing="0">
     <tr>
         <td>
             <table width="400px" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                     <td style="border-right: 2px solid #f1e510;"><img src="http://mescglobal.com/signature/phone.gif" alt=""/></td><td style="padding:0 20px;font-family: 'Roboto', sans-serif;">
-                    <span style="font-family: 'Roboto', sans-serif;">00447 342 300 007</span>
+                    <span style="font-family: 'Roboto', sans-serif; font-size: 15px;">00447 342 300 007</span>
                 </td>
                 </tr>
                 <tr>
                     <td style="border-right: 2px solid #f1e510;"><img src="http://mescglobal.com/signature/phone2.gif" alt=""/></td><td style="padding:0 20px;font-family: 'Roboto', sans-serif;">
-                    <span style="font-family: 'Roboto', sans-serif;">00447 342 300 007</span>
+                    <span style="font-family: 'Roboto', sans-serif; font-size: 15px;">00447 342 300 007</span>
                 </td>
                 </tr>
                 <tr>
                     <td style="border-right: 2px solid #f1e510;"><img src="http://mescglobal.com/signature/mail.gif" alt=""/></td><td style="padding:0 20px;font-family: 'Roboto', sans-serif;">
-                    <span style="font-family: 'Roboto', sans-serif;">m.alawwad@mescglobal.com</span>
+                    <span style="font-family: 'Roboto', sans-serif; font-size: 15px;">m.alawwad@mescglobal.com</span>
                 </td>
                 </tr>
                 <tr>
                     <td style="border-right: 2px solid #f1e510;"><img src="http://mescglobal.com/signature/pc.gif" alt=""/></td><td style="padding:0 20px;font-family: 'Roboto', sans-serif;">
-                    <span style="font-family: 'Roboto', sans-serif;">mescglobal.com</span>
+                    <span style="font-family: 'Roboto', sans-serif; font-size: 15px;">mescglobal.com</span>
                 </td>
                 </tr>
                 <tr>
                     <td style="border-right: 2px solid #f1e510;"><img src="http://mescglobal.com/signature/target.gif" alt=""/></td><td style="padding:0 20px;font-family: 'Roboto', sans-serif;">
-                    <span style="font-family: 'Roboto', sans-serif;">
+                    <span style="font-family: 'Roboto', sans-serif; font-size: 15px;">
                         165 The Broadway, Wimbledon London, SW19 1NE
                     </span>
                 </td>
@@ -85,7 +83,7 @@
         </td>
     </tr>
 </table>
-<table style="height:50px;" >
+<table style="height:20px;" >
     <tr>
         <td></td>
         <td></td>
